Swagger get hotfix y controladores y constrints
